--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
 # the following people contributed to this repository
-
-UMAR AMINA ABDULMUMIN 
-ITAMAN JULIUS
+Umar Amina Abdulmumin <umaraminaabdulmumin@gmail.com>
+Itaman Julius <email>
